# FEmbed-ESP

./: CMakeLists.txt  Kconfig  README.md  library.json
src/: ArduinoNvs.cpp  ArduinoNvs.h  BluFi.cpp  BluFi.h  HttpsOTAUpdate.cpp  Update.cpp  Update.h  Updater.cpp  WiFi.cpp  WiFi.h  WiFiAP.cpp  WiFiAP.h  WiFiGeneric.cpp  WiFiGeneric.h  WiFiSTA.cpp  WiFiSTA.h  WiFiScan.cpp  WiFiScan.h  WifiConfigManager.cpp  WifiConfigManager.h  WifiManager.cpp  WifiManager.h  crc.cpp  crc.hpp  hal-misc.c  hal-misc.h  mDNS.cpp  mDNS.hpp
